# raf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci_lint.yml  ci_unit_test.yml  deploy_docker.yml  update_tvm.yml  wheel_manylinux_nightly.yaml
apps/: CMakeLists.txt
apps/include_mnm/: CMakeLists.txt  main.cc
apps/include_raf/: CMakeLists.txt  main.cc
apps/test/: CMakeLists.txt  main.cc
apps/test_mnm/: CMakeLists.txt  main.cc
ci/: Jenkinsfile  env.sh  task_build.sh  task_check_autogen.sh  task_clean.sh  task_cpp_unittest.sh  task_lint.sh  task_python_distributed.sh  task_python_unittest.sh
ci/batch/: README.md  backup-ccache.sh  cli.sh  job-def-cfg.json  submit-job.py
cmake/: AddTest.cmake  ClangFormat.cmake  FindCUDA.cmake  FindGTEST.cmake  Util.cmake  config.cmake
cmake/backend/: CUDA.cmake  CUDNN.cmake
cmake/modules/: CUBLAS.cmake  CUDA.cmake  CUDNN.cmake  CUTLASS.cmake  DMLC-core.cmake  FindNCCL.cmake  GTest.cmake  Git.cmake  MPI.cmake  NCCL.cmake  Sanitizer.cmake  TVM.cmake  Threads.cmake
cmake/utils/: CheckCUDACompilerFlag.cmake  MNMCmakeUtils.cmake  MNMTest.cmake  RAFCmakeUtils.cmake  RAFTest.cmake
docker/: Dockerfile.ci_cpu  Dockerfile.ci_gpu  bash.sh  build.sh  push.sh  with_the_same_user
docker/batch/: entry.sh
docker/install/: ubuntu_install_apex.sh  ubuntu_install_core.sh  ubuntu_install_llvm.sh  ubuntu_install_python.sh  ubuntu_install_torch.sh
docs/: CNAME  README.md  _config.yml  index.md  wheels.html
docs/2_user_guide/: Train-PyTorch-Model.md
docs/3_dev_guide/: Add-Operator.md  Analyze-Model.md  Distribution-Mechanism.md  IR-Format.md  Memory-Pool.md  Op-Dialect.md
docs/4_contrib_guide/: RFC-Collections.md
docs/_includes/: quick_start_local.html
docs/js/: quick-start-widget.js
docs/wiki/: 1_Motivation.md  Add-Operator.md  Build-MNM-on-Ubuntu-18.04.md  Build-MNM-on-macOS.md  Distributed-Training.md  Git-and-GitHub-Workflow.md  Home.md  Memory-Pool.md  Motivation.md  Profile-Your-Code.md  README.md  RFC-Collections.md  Recommended-Development-Environment.md  Roadmaps-and-Timelines.md  gen_readme.py
include/mnm/: analysis.h  base.h  binding.h  cache.h  communicator.h  connector.h  dataflow_pattern.h  device.h  device_api.h  dialect.h  dist_context.h  enum_base.h  event_pool.h  executor.h  ir.h  ir_ext.h  memory_pool.h  memory_profiler.h  mpi_communicator.h  nccl_communicator.h  ndarray.h  op.h  op_profiler.h  op_utils.h  pass.h  pass_manager.h  profiler.h  registry.h  rly.h  serialization.h  stream_pool.h  tensor.h  test.h  traced_entry.h  type.h  types.h  value.h  value_functor.h
include/raf/: analysis.h  binding.h  cache.h  communicator.h  connector.h  dataflow_pattern.h  device.h  device_api.h  dialect.h  dist_config.h  dist_context.h  enum_base.h  event_pool.h  executor.h  file.h  ir.h  ir_ext.h  memory_pool.h  memory_profiler.h  mpi_communicator.h  nccl_communicator.h  op.h  op_profiler.h  op_utils.h  pass.h  pass_manager.h  profiler.h  registry.h  scope_timer.h  serialization.h  sharding.h  stream_pool.h  tensor.h  type.h  value.h  value_functor.h
pages/: wheels.html
python/: setup.py
python/mnm/: __init__.py  _base.py  _context.py  _imports.py  _lib.py  _ndarray.py  base.py  build.py  context.py  module.py  ndarray.py  value.py
python/raf/: __init__.py  _lib.py  _lib_utils.py  build.py
sch/: latest.json  v1.json  v2.json
scripts/: __init__.py  clang-format.sh  env.sh  mnm-cpptest.sh  pre-commit
scripts/cu_autogen/: emitter.py  extractor.py  main.py  preprocessor.py  utils.py
scripts/cudnn_gen/: emitter.py  extractor.py  main.py
scripts/distributed/: dist_example.py  launch_multi_machine.sh  launch_single_machine.sh
scripts/lint/: add_license_header.py  check-lint.sh  check_asf.py  check_license_header.py  git-black.sh  git-clang-format.sh  git-skip-testing.sh  pylintrc  pytestlintrc  run-clang-format.sh
scripts/op_autogen/: main.py
scripts/op_def/: __init__.py  base.py  broadcast.py  gemm.py  helper.py  loss.py  nn.py  optim.py  reduction.py  topi.py  transform.py
scripts/op_gen/: main.py  util.py
scripts/op_schema/: main.py
scripts/src_codegen/: codegen_utils.py  def_api.py  def_cudnn.py  def_op.py  def_schema.py  def_topi_map.py  def_tvm_op.py  extract_relay_ops.py  generated_file_list.txt  git_add_generated_files.sh  git_reset_generated_files.sh  main_backend_cudnn.py  main_cxx_reg.py  main_cxx_schema.py  main_cxx_tvm_op.py  main_py_ffi.py  main_py_imp.py  main_py_ir.py  main_py_sym.py  run_all.sh
scripts/wheel/: build_wheel_manylinux.sh  gen_pypi_index.py  rafscript.sh  upload_wheel.py
src/: requests.h  tensor.cc  value.cc
src/analysis/: dependency_graph.cc  dependency_graph.h
src/common/: arg_utils.h  cuda.h  cuda_utils.h  shape_utils.h
src/device_api/: device_api.cc
src/distributed/: nccl_communicator.cc
src/impl/: .ir_ext.cc.swp  binding.cc  build_info.cc  dataflow_pattern.cc  device.cc  device_api.cc  dialect.cc  event_pool.cc  executor.cc  interpreter.cc  ir_ext.cc  memory_pool.cc  model.cc  op.cc  registry.cc  serialization.cc  sharding.cc  stream_pool.cc  tensor.cc  type.cc  value.cc
src/memory_pool/: memory_pool.cc
src/mnm/: commons.h  device_api.cc  memory_pool.cc  ndarray.cc  op.cc  requests.h  rly.cc  shape_utils.h  tensor.cc  test.cc  value.cc
src/op/: base_ops.cc  conv2d.cc  max_pool2d.cc  op.cc  op_utils.h
src/pass/: anf_partition.cc  annotate_collective_ops.cc  annotate_dist_ops.cc  annotate_stream.cc  annotate_target.cc  assign_device.cc  auto_cast.cc  call_graph.cc  call_graph.h  canonicalize_ops.cc  common.h  context_analysis.cc  convert_utils.h  fuse_ops.cc  (+67 more)
tests/cpp/: CMakeLists.txt  test_dim.cc  test_hello.cc  test_index_t.cc  test_memory_pool.cc  test_no_pool.cc  test_op_backend_registry.cc  test_op_dialect.cc  test_op_dispatch.cc  test_op_profiler.cc  test_shape.cc  test_stream.cc  test_tensor.cc
tests/cudnn/: CMakeLists.txt  test_cudnn.cc  test_cudnn.cu  test_manual.cc  test_ops.cc
(+916 files in other folders)
