set(TEST_EXECS "")
file(GLOB_RECURSE TEST_SRCS ./*.cc)
find_package(GTest REQUIRED)  # Provide: GTEST_LIBRARY, GTEST_INCLUDE_DIR, GTEST_MAIN_LIBRARY

foreach(__srcpath ${TEST_SRCS})
  get_filename_component(__srcname ${__srcpath} NAME)
  string(REPLACE ".cc" "" __execname ${__srcname})
  add_executable(${__execname} ${__srcpath})
  list(APPEND TEST_EXECS ${__execname})
  target_link_libraries(${__execname} mnm)
  target_link_libraries(${__execname} dl)
  # TODO(@were): try something that could compile on Windows
  target_link_libraries(${__execname} pthread)
  target_link_libraries(${__execname} ${GTEST_LIBRARY})
  target_include_directories(${__execname} PUBLIC ${MNM_HEADER_FILES})
  target_include_directories(${__execname} PUBLIC ${MNM_3RD_PARTY_INCLUDE_DIRS})
  target_compile_features(${__execname} PRIVATE cxx_std_14)
  set_target_properties(${__execname} PROPERTIES EXCLUDE_FROM_ALL 1)
  set_target_properties(${__execname} PROPERTIES EXCLUDE_FROM_DEFAULT_BUILD 1)
  set_target_properties(${__execname} PROPERTIES CXX_STANDARD 14)
endforeach()
add_custom_target(mnm-cpptest DEPENDS ${TEST_EXECS})
